// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders snapshot of variant blue and size large 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #05192D;
  background-color: #06BDFC;
  font-size: 14px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant blue and size medium 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #05192D;
  background-color: #06BDFC;
  font-size: 12px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant blue and size small 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #05192D;
  background-color: #06BDFC;
  font-size: 10px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant green and size large 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #05192D;
  background-color: #03EF62;
  font-size: 14px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant green and size medium 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #05192D;
  background-color: #03EF62;
  font-size: 12px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant green and size small 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #05192D;
  background-color: #03EF62;
  font-size: 10px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant grey and size large 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #05192D;
  background-color: #D9D9E2;
  font-size: 14px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant grey and size medium 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #05192D;
  background-color: #D9D9E2;
  font-size: 12px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant grey and size small 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #05192D;
  background-color: #D9D9E2;
  font-size: 10px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant greySubtle and size large 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #626D79;
  background-color: #EFEFEF;
  font-size: 14px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant greySubtle and size medium 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #626D79;
  background-color: #EFEFEF;
  font-size: 12px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant greySubtle and size small 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #626D79;
  background-color: #EFEFEF;
  font-size: 10px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant navy and size large 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #FFFFFF;
  background-color: #05192D;
  font-size: 14px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant navy and size medium 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #FFFFFF;
  background-color: #05192D;
  font-size: 12px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant navy and size small 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #FFFFFF;
  background-color: #05192D;
  font-size: 10px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant orange and size large 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #05192D;
  background-color: #FF931E;
  font-size: 14px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant orange and size medium 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #05192D;
  background-color: #FF931E;
  font-size: 12px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant orange and size small 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #05192D;
  background-color: #FF931E;
  font-size: 10px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant pink and size large 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #05192D;
  background-color: #FF6EA9;
  font-size: 14px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant pink and size medium 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #05192D;
  background-color: #FF6EA9;
  font-size: 12px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant pink and size small 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #05192D;
  background-color: #FF6EA9;
  font-size: 10px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant purple and size large 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #FFFFFF;
  background-color: #7933FF;
  font-size: 14px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant purple and size medium 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #FFFFFF;
  background-color: #7933FF;
  font-size: 12px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant purple and size small 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #FFFFFF;
  background-color: #7933FF;
  font-size: 10px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant red and size large 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #05192D;
  background-color: #FF5400;
  font-size: 14px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant red and size medium 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #05192D;
  background-color: #FF5400;
  font-size: 12px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant red and size small 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #05192D;
  background-color: #FF5400;
  font-size: 10px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant white and size large 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #05192D;
  background-color: #FFFFFF;
  font-size: 14px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant white and size medium 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #05192D;
  background-color: #FFFFFF;
  font-size: 12px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant white and size small 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #05192D;
  background-color: #FFFFFF;
  font-size: 10px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant yellow and size large 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #05192D;
  background-color: #FCCE0D;
  font-size: 14px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant yellow and size medium 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #05192D;
  background-color: #FCCE0D;
  font-size: 12px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;

exports[`Badge renders snapshot of variant yellow and size small 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  color: #05192D;
  background-color: #FCCE0D;
  font-size: 10px;
  height: 18px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test
  </span>
</span>
`;
